# chiplet

./: CMakeLists.txt  LICENSE  README.md
cmake/: BuildSettings.cmake  code-coverage.cmake
include/chiplet/: chip8compiler.hpp  chip8decompiler.hpp  chip8meta.hpp  chip8variants.hpp  chunkedmemory.hpp  cli.hpp  gifimage.hpp  octocartridge.hpp  octocompiler.hpp  sha1.hpp  utility.hpp  wavfile.hpp
src/: CMakeLists.txt  chip8compiler.cpp  chip8decompiler.cpp  chiplet.cpp  chunkedmemory.cpp  octo_compiler.cpp  octo_compiler.hpp  octocartridge.cpp  octocompiler.cpp
src/c-octo/: octo_compiler.h  octo_compiler.hpp
test/: CMakeLists.txt  assembler-test.py  assembler_tests.cpp  chunkedmemory_test.cpp  dis1802.cpp  gifimage_tests.cpp  utility_tests.cpp
test/c-octo-tests/: err_plane.8o  err_plane.err  err_trailing_escape.err  err_value_is_reserved.8o  err_value_is_reserved.err
